--- a/capacity_app/templates/capacity_app/project_create_request.html
+++ b/capacity_app/templates/capacity_app/project_create_request.html
@@ -126,9 +126,7 @@ input[type="text"] {
                             <label for="project" class="form-label">Select Project <sup><strong>*</strong></sup></label>
                             <select id="project" class="form-select" name="project" required>
                                 <option value="" selected="selected" disabled="disabled">Select Project</option>
-                                {% for project in projects %}
-                                <option value="{{project}}">{{project}}</option>
-                                {% endfor %}
+                                <option value="{{projects}}">{{projects}}</option>
                             </select>
                         </div>
 
