--- a/capacity_app/templates/capacity_app/procurement_approval.html
+++ b/capacity_app/templates/capacity_app/procurement_approval.html
@@ -94,7 +94,6 @@ td {
                                data-buttons-class="primary">
                             <thead>
                             <tr>
-                                <tr>
                                 <th nowrap class="id" data-field="id" data-sortable="true" >ID</th>
                                 <th nowrap class="dc" data-field="dc" data-sortable="true" >DC</th>
                                 <th nowrap class="project_name" data-field="project_name" data-sortable="true" >Project Name</th>
@@ -128,7 +127,7 @@ td {
                                 <td nowrap class="updated_at">{{i.created_at|date:'Y-m-d H:i:s'}}</td>
                                 <td nowrap class="remarks">{{i.remarks}}</td>
                                 <td>
-                                    <button type="button" class="btn btn-success btn-sm" title="Complete Request"><a style="text-decoration:none;color:#fff;" href="{% url 'completed_procurement_approval' pk=i.id %}"><i class="fas fa-check"></i>&nbsp;Approve</a></button>
+                                    <button type="button" class="btn btn-primary btn-sm" title="Complete Request"><a style="text-decoration:none;color:#fff;" href="{% url 'completed_procurement_approval' pk=i.id %}"><i class="fas fa-check"></i>&nbsp;Approve</a></button>
                                 </td>
                                  {% endfor %}
 
