--- a/capacity_app/templates/capacity_app/finance_completed.html
+++ b/capacity_app/templates/capacity_app/finance_completed.html
@@ -92,7 +92,6 @@ td {
                                data-buttons-class="primary">
                             <thead>
                             <tr>
-                                <tr>
                                 <th nowrap class="id" data-field="id" data-sortable="true" >ID</th>
                                 <th nowrap class="dc" data-field="dc" data-sortable="true" >DC</th>
                                 <th nowrap class="project_name" data-field="project_name" data-sortable="true" >Project Name</th>
@@ -106,7 +105,10 @@ td {
                                 <th nowrap class="gravit" data-field="gravit" data-sortable="true" > Gravit (TB)</th>
                                 <th nowrap class="updated_at" data-field="updated_at" data-sortable="true" >Updated Date</th>
                                 <th nowrap class="remarks" data-field="remarks" data-sortable="true" >Remarks</th>
-                                <th nowrap class="action" data-sortable="true">Actions</th>
+                                {% for i in data %}
+                                <th>{{i.milestone_name}}</th>
+                                {% endfor %}
+                                <th nowrap class="action" data-sortable="true" data-formatter="priceFormatter">Status</th>
                             </tr>
                             </thead>
                             <tbody>
@@ -125,6 +127,9 @@ td {
                                 <td nowrap class="gravit">{{i.gravit}}</td>
                                 <td nowrap class="updated_at">{{i.created_at|date:'Y-m-d H:i:s'}}</td>
                                 <td nowrap class="remarks">{{i.remarks}}</td>
+                                 {% for i in data %}
+                                <th>{{i.date}}</th>
+                                {% endfor %}
                                 <td nowrap class="action">Completed</td>
                                 {% endfor %}
                             </tr>
@@ -160,7 +165,7 @@ td {
   row.status === 'Pending' | row.status === 'PENDING' | row.status === 'pending' ? 'btn-warning btn-sm' :
   row.status === 'Work IN Progress' | row.status === 'work in progress' | row.status === 'WORK IN PROGRESS' ? 'btn-info btn-sm' :
   row.status === 'Completed' | row.status === 'COMPLETED' | row.status === 'completed' ?'btn-success btn-sm' :
-  'btn-primary btn-sm'
+  'btn-success btn-sm'
   return '<button class="font btn ' + icon + '">' + value + '</button>'
   }
 </script>
